Build a HelloWorld module in Yves that renders the Hello World! string, in reverse order, on the screen

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 !/.gitignore
 !/README.md
 
+!/src/Pyz/Client/HelloWorld
+!/src/Pyz/Client/HelloWorld/*
+
+!/src/Pyz/Shared/HelloWorld
+!/src/Pyz/Shared/HelloWorld/*
+
 !/src/Pyz/Yves/HelloWorld
 !/src/Pyz/Yves/HelloWorld/*
 !/src/Pyz/Yves/ShopApplication/
