--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 !/.gitignore
 !/README.md
 
+!/config/Shared/config_default.php
+!/config/Zed/oms
+!/config/Zed/oms/*
+
 !/src/Pyz/Client/HelloWorld
 !/src/Pyz/Client/HelloWorld/*
 
@@ -29,3 +33,6 @@
 
 !/src/Pyz/Zed/HelloWorld/
 !/src/Pyz/Zed/HelloWorld/*
+
+!/src/Pyz/Zed/Oms/
+!/src/Pyz/Zed/Oms/*
